@startuml

title __TILES's Class Diagram__\n

  namespace tiles {
    class tiles.GrassTile {
        + GrassTile()
    }
  }
  

  namespace tiles {
    class tiles.Tile {
        {static} + DEFAULT_TILEHEIGHT : int
        {static} + DEFAULT_TILEWIDTH : int
        {static} + grassTile : Tile
        {static} + tiles : Tile[]
        {static} + wallTile : Tile
        # id : int
        # texture : BufferedImage
        + Tile()
        + getId()
        {static} + getTiles()
        + isSolid()
        + render()
        {static} + setTiles()
        + update()
    }
  }
  

  namespace tiles {
    class tiles.WallTile {
        + WallTile()
        + isSolid()
    }
  }
  

  tiles.GrassTile -up-|> tiles.Tile
  tiles.WallTile -up-|> tiles.Tile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
